--- a/src/pages/PasswordGeneratorPage/PasswordGeneratorPage.css
+++ b/src/pages/PasswordGeneratorPage/PasswordGeneratorPage.css
@@ -11,7 +11,7 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 50rem;
+  height: 31.25rem;
 }
 
 .card {
@@ -20,7 +20,7 @@
   align-items: center;
   justify-content: center;
   width: 80%;
-  height: 30rem;
+  height: 18.75rem;
   background-color: var(--color-secondary);
 }
 
@@ -29,13 +29,13 @@
   align-items: center;
   justify-content: center;
   width: 90%;
-  height: 5rem;
-  margin-bottom: 1rem;
+  height: 3.125rem;
+  margin-bottom: 0.625rem;
   background: var(--color-primary);
 }
 
 .card__form-input {
-  font-size: 2rem;
+  font-size: 1.25rem;
   width: 80%;
   color: var(--color-white);
   background-color: var(--color-primary);
@@ -51,7 +51,7 @@
   align-items: center;
   justify-content: space-between;
   width: 90%;
-  height: 15rem;
+  height: 9.375rem;
 }
 
 .card__options-label-password {
@@ -62,10 +62,10 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  height: 2rem;
+  height: 1.25rem;
   width: 30%;
-  padding: 0.1rem;
-  font-size: 1.5rem;
+  padding: 0.0625rem;
+  font-size: 0.9375rem;
   outline: none;
 }
 
@@ -73,17 +73,17 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 5rem;
+  height: 3.125rem;
   width: 90%;
-  margin-top: 1rem;
+  margin-top: 0.625rem;
 }
 
 .card__btn-generate-password {
-  height: 5rem;
+  height: 3.125rem;
   background: none;
   border: none;
-  padding: 1rem;
-  font-size: 2.5rem;
+  padding: 0.625rem;
+  font-size: 1.5625rem;
   color: var(--color-white);
   background-color: var(--color-primary);
   cursor: pointer;
@@ -91,7 +91,7 @@
 
 @media only screen and (min-width: 1024px) {
   .card-wrapper {
-    height: 30rem;
+    height: 18.75rem;
   }
 
   .card {
